<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/dialog_font_regular"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/colorpicker_item_margin"
			android:text="@string/menu_font_regular"
			android:textSize="@dimen/text_big"
			android:lines="1"
			app:fontFamily="@font/texgyreheros" />

		<TextView
			android:id="@+id/dialog_font_bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/colorpicker_item_margin"
			android:text="@string/menu_font_bold"
			android:textSize="@dimen/text_big"
			android:lines="1"
			app:fontFamily="@font/texgyreheros_bold" />

		<TextView
			android:id="@+id/dialog_font_italic"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/colorpicker_item_margin"
			android:text="@string/menu_font_italic"
			android:textSize="@dimen/text_big"
			android:lines="1"
			app:fontFamily="@font/texgyreheros_italic" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/dialog_font_huge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/colorpicker_item_margin"
			app:fontFamily="@font/texgyreheros"
			android:text="@string/textsize_huge"
			android:textSize="@dimen/text_huge"
			android:lines="1" />

		<TextView
			android:id="@+id/dialog_font_big"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/colorpicker_item_margin"
			app:fontFamily="@font/texgyreheros"
			android:text="@string/textsize_big"
			android:textSize="@dimen/text_big"
			android:lines="1" />

		<TextView
			android:id="@+id/dialog_font_medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/colorpicker_item_margin"
			app:fontFamily="@font/texgyreheros"
			android:text="@string/textsize_medium"
			android:textSize="@dimen/text_medium"
			android:lines="1" />

		<TextView
			android:id="@+id/dialog_font_small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/colorpicker_item_margin"
			app:fontFamily="@font/texgyreheros"
			android:text="@string/textsize_small"
			android:textSize="@dimen/text_small"
			android:lines="1" />

	</LinearLayout>

	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:rowCount="2"
		android:columnCount="5">

		<ImageView
			android:id="@+id/dialog_font_color_1"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/banned" />

		<ImageView
			android:id="@+id/dialog_font_color_2"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/tile" />

		<ImageView
			android:id="@+id/dialog_font_color_3"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/newfag" />

		<ImageView
			android:id="@+id/dialog_font_color_4"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/fag" />

		<ImageView
			android:id="@+id/dialog_font_color_5"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/sponsor" />

		<ImageView
			android:id="@+id/dialog_font_color_6"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/middle_old_fag" />

		<ImageView
			android:id="@+id/dialog_font_color_7"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/old_fag" />

		<ImageView
			android:id="@+id/dialog_font_color_8"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/mod" />

		<ImageView
			android:id="@+id/dialog_font_color_9"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/old_mod" />

		<ImageView
			android:id="@+id/dialog_font_color_10"
			android:layout_width="@dimen/colorpicker_item_size"
			android:layout_height="@dimen/colorpicker_item_size"
			android:layout_margin="@dimen/colorpicker_item_margin"
			android:src="@drawable/circle"
			app:tintMode="src_in"
			app:tint="@color/admin" />

	</GridLayout>

</LinearLayout>